Fix odd code wraping in chrome

--- a/src/sass/Base/BaseModules/_Code.sass
+++ b/src/sass/Base/BaseModules/_Code.sass
@@ -8,7 +8,8 @@ code
 	font-size: 86%
 	margin: 0 .2rem
 	padding: 0.8rem 1rem
-	white-space: nowrap
+	//white-space: nowrap
+	white-space: normal
 
 pre
 	border-left: .3rem solid $base-color-primary
