--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -438,7 +438,7 @@ code {
   font-size: 86%;
   margin: 0 .2rem;
   padding: 0.8rem 1rem;
-  white-space: nowrap; }
+  white-space: normal; }
 
 pre {
   border-left: 0.3rem solid #1890ff;
